--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,11 @@
   .hidden {
     opacity: 0;
   }
+
+  .grow { 
+    transition: all .2s ease-in-out; 
+  }
+  
+  .grow:hover { 
+    transform: scale(1.1); 
+  }
