--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,10 @@
     margin: 0;
     padding: 20px;
 }
-
 *{
     font-family: "Montserrat", sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 .title{
@@ -12,6 +13,7 @@
     align-items: center;
     align-self: center;
     margin-bottom: 20px;
+    height: 60px;
 }
 
 .title h1{
@@ -26,6 +28,7 @@
     padding: 7px;
     outline: 1px solid grey;
     border-radius: 10px;
+    height: 35px;
 }
 
 .search-bar input{
@@ -71,4 +74,12 @@
   
   .grow:hover { 
     transform: scale(1.1); 
+  }
+
+  .dot {
+    position: absolute;
+    height: 25px;
+    width: 25px;
+    background-color: blue;
+    border-radius: 50%;
   }
