--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@
 
 .map-container object{
     max-width: 100%;
-
+    overflow:auto;
 }
 
 .map-container{
@@ -64,7 +64,7 @@
     border-radius: 4px;
     padding: 10px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    max-width: 50vw;
+    width: 600px;
     transition: opacity 0.2s ease;
     pointer-events: none;   
   }
