--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,27 @@
 .root{
     margin: 0;
-    padding: 20px;
+    height: 100vh;
 }
 *{
     font-family: "Montserrat", sans-serif;
-
+    padding: 0;
+    margin: 0;
 }
 
 .title{
     display: flex;
+    flex-direction: row;
     align-items: center;
-    align-self: center;
-    margin-bottom: 20px;
-    height: 60px;
+    justify-content: center;
+    height: 7vh;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+
+}
+
+.title-icon{
+    font-size: 2rem;
+    margin-right: 10px;
+    color: #061f57;
 }
 
 .title h1{
@@ -45,13 +54,14 @@
 .map-container object{
     max-width: 100%;
     overflow:auto;
+    height: 90%;
 }
 
 .map-container{
-    margin-top: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 88vh;
 }
 .non-map{
     max-height: 135px;
@@ -92,4 +102,16 @@
     width: 25px;
     background-color: blue;
     border-radius: 50%;
+  }
+
+  .footer{
+    height: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+  }
+
+  .footer p{
+    font-size: 1rem;
   }
