--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f1f1f1;
+    background-color: #e0e0e0;
     height: 88vh;
 }
 .non-map{
