--- a/styles.css
+++ b/styles.css
@@ -167,3 +167,43 @@
   .region-info-panel.active {
     right: 0; 
   }
+
+  .panel-header {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding: 15px;
+    background-color: #061f57;
+    color: white;
+  }
+
+  .close-button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1.5rem;
+    cursor: pointer;
+    margin-right: 10px;
+  }
+
+  #panel-content {
+    padding: 15px;
+  }
+
+  .state-info {
+    margin-bottom: 20px;
+    padding: 15px;
+    border-radius: 8px;
+  }
+
+  .state-info h3 {
+    color: #061f57;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 5px;
+  }
+
+  .state-info p {
+    margin: 5px 0;
+    font-size: 0.95rem;
+  }
